`navigator.storage.getDirectory()` fails in service workers with an `NotSupportedError: The operation is not supported` https://bugs.webkit.org/show_bug.cgi?id=273906 rdar://127775672

Reviewed by Ben Nham.

Add a storage provider to shared workers and service workers.
We reuse the one used for documents since shared workers and service workers use a WorkerStorageConnection which will use the document's one.

* LayoutTests/imported/w3c/web-platform-tests/file-system-access/getDirectory.https.any-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/file-system-access/getDirectory.https.any.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/file-system-access/getDirectory.https.any.js: Added.
(promise_test.async t):
* LayoutTests/imported/w3c/web-platform-tests/file-system-access/getDirectory.https.any.serviceworker-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/file-system-access/getDirectory.https.any.serviceworker.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/file-system-access/getDirectory.https.any.sharedworker-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/file-system-access/getDirectory.https.any.sharedworker.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/file-system-access/getDirectory.https.any.worker-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/file-system-access/getDirectory.https.any.worker.html: Added.
* Source/WebKit/WebProcess/Storage/WebSWContextManagerConnection.cpp:
(WebKit::WebSWContextManagerConnection::installServiceWorker):
* Source/WebKit/WebProcess/Storage/WebSharedWorkerContextManagerConnection.cpp:
(WebKit::WebSharedWorkerContextManagerConnection::launchSharedWorker):

Canonical link: https://commits.webkit.org/279908@main